--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -54,18 +54,20 @@
         <div class="hamburger-trigger hamburger-bg"></div>
     </section>
     <section id="about" class="scrollanime">
-        <div class="about-flex">
-            <h1 class="wm-vl about-heading">伝統とイマを繋ぐ</h1>
-            <div class="about-message wm-vl">
-                <p>古来から伝わる伝統文化</p>
-                <p>昔からそこにある材料</p>
-                <p>その土地に長い間書けて</p>
-                <p>最適化してきた</p>
-                <p>たくさんのヒントを</p>
-                <p>イマを生きる私たちの</p>
-                <p>心地よさに取り入れ</p>
-                <p>新たな技術革新を</p>
-                <p>起こし続ける会社です</p>
+        <div class="wrapper">
+            <div class="about-flex">
+                <h1 class="wm-vl about-heading">伝統とイマを繋ぐ</h1>
+                <div class="about-message wm-vl">
+                    <p>古来から伝わる伝統文化</p>
+                    <p>昔からそこにある材料</p>
+                    <p>その土地に長い間書けて</p>
+                    <p>最適化してきた</p>
+                    <p>たくさんのヒントを</p>
+                    <p>イマを生きる私たちの</p>
+                    <p>心地よさに取り入れ</p>
+                    <p>新たな技術革新を</p>
+                    <p>起こし続ける会社です</p>
+                </div>
             </div>
         </div>
     </section>
@@ -417,7 +419,7 @@
         </div>
     </footer>
     <div class="to-top">
-        <span class="up-arrow"></span>
+        <div class="arrow"></div>
     </div>
     <!-- script -->
     <script src="./js/jquery-3.6.0.min.js"></script>
