--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -233,7 +233,7 @@
     <section id="company" class="scrollanime">
         <div class="wrapper">
             <h1 class="section-title">COMPANY</h1>
-            <h2 class="section-sub-title">施工事例</h2>
+            <h2 class="section-sub-title">会社概要</h2>
             <div class="company-contents">
                 <div class="access-map">
                     <iframe
@@ -258,7 +258,7 @@
             <h2 class="section-sub-title">お問い合わせ</h2>
             <p class="contact-description">３営業日以内にメールにてご連絡いたします。*は入力必須項目となります。</p>
             <form action="#" class="contact-form">
-                <div class="form-control">
+                <div class="form-control-name">
                     <label for="name">お名前 *</label>
                     <input type="text" name="name" id="name" placeholder="例：北村太郎">
                 </div>
@@ -271,11 +271,11 @@
                         <label for="female">女性</label>
                     </div>
                 </div>
-                <div class="form-control">
+                <div class="form-control-email">
                     <label for="email">メールアドレス *</label>
-                    <input type="text" name="email" id="email" placeholder="例：aaaaaaaa@gmail.com">
+                    <input type="email" name="email" id="email" placeholder="例：aaaaaaaa@gmail.com">
                 </div>
-                <div class="form-control">
+                <div class="form-control-type">
                     <label for="type">問い合わせ種別</label>
                     <select name="type" id="type">
                         <option value="house">家づくりについて</option>
