fix layout, animation

--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -156,33 +156,34 @@
                 </div>
             </div>
         </div>
-        <section class="modal-area">
-            <div class="modal-bg modal-close"></div>
-            <div class="modal-content-work01 modal-content">
-                <img src="./images/PC_WORKS_modal_01.png" alt="【新築】長崎県T.O様自宅"
-                    srcset="./images/PC_WORKS_modal_01.png 1x, ./images/PC_WORKS_modal_01@2x.png 2x">
-                <p class="modal-img-description">【新築】長崎県T.O様自宅</p>
-                <div class="modal-cancel modal-close">✕</div>
-            </div>
-            <div class="modal-content-work02 modal-content">
-                <img src="./images/PC_WORKS_modal_02.png" alt="【リノベーション】京都府カトリック丹波教会"
-                    srcset="./images/PC_WORKS_modal_02.png 1x, ./images/PC_WORKS_modal_02@2x.png 2x">
-                <p class="modal-img-description">【リノベーション】京都府カトリック丹波教会</p>
-                <div class="modal-cancel modal-close">✕</div>
-            </div>
-            <div class="modal-content-work03 modal-content">
-                <img src="./images/PC_WORKS_modal_03.png" alt="【新築】東京都A.F様自宅件事務所"
-                    srcset="./images/PC_WORKS_modal_03.png 1x, ./images/PC_WORKS_modal_03@2x.png 2x">
-                <p class="modal-img-description">【新築】東京都A.F様自宅件事務所</p>
-                <div class="modal-cancel modal-close">✕</div>
-            </div>
-            <div class="modal-content-work04 modal-content">
-                <img src="./images/PC_WORKS_modal_04.png" alt="【都市開発】山形県銀山温泉協同組合"
-                    srcset="./images/PC_WORKS_modal_04.png 1x, ./images/PC_WORKS_modal_04@2x.png 2x">
-                <p class="modal-img-description">【都市開発】山形県銀山温泉協同組合</p>
-                <div class="modal-cancel modal-close">✕</div>
-            </div>
-        </section>
+    </section>
+
+    <section class="modal-area">
+        <div class="modal-bg modal-close"></div>
+        <div class="modal-content-work01 modal-content">
+            <img src="./images/PC_WORKS_modal_01.png" alt="【新築】長崎県T.O様自宅"
+                srcset="./images/PC_WORKS_modal_01.png 1x, ./images/PC_WORKS_modal_01@2x.png 2x">
+            <p class="modal-img-description">【新築】長崎県T.O様自宅</p>
+            <div class="modal-cancel modal-close">✕</div>
+        </div>
+        <div class="modal-content-work02 modal-content">
+            <img src="./images/PC_WORKS_modal_02.png" alt="【リノベーション】京都府カトリック丹波教会"
+                srcset="./images/PC_WORKS_modal_02.png 1x, ./images/PC_WORKS_modal_02@2x.png 2x">
+            <p class="modal-img-description">【リノベーション】京都府カトリック丹波教会</p>
+            <div class="modal-cancel modal-close">✕</div>
+        </div>
+        <div class="modal-content-work03 modal-content">
+            <img src="./images/PC_WORKS_modal_03.png" alt="【新築】東京都A.F様自宅件事務所"
+                srcset="./images/PC_WORKS_modal_03.png 1x, ./images/PC_WORKS_modal_03@2x.png 2x">
+            <p class="modal-img-description">【新築】東京都A.F様自宅件事務所</p>
+            <div class="modal-cancel modal-close">✕</div>
+        </div>
+        <div class="modal-content-work04 modal-content">
+            <img src="./images/PC_WORKS_modal_04.png" alt="【都市開発】山形県銀山温泉協同組合"
+                srcset="./images/PC_WORKS_modal_04.png 1x, ./images/PC_WORKS_modal_04@2x.png 2x">
+            <p class="modal-img-description">【都市開発】山形県銀山温泉協同組合</p>
+            <div class="modal-cancel modal-close">✕</div>
+        </div>
     </section>
     <section id="news" class="bg-light-green scrollanime">
         <div class="wrapper">
@@ -260,12 +261,12 @@
             <form action="#" class="contact-form">
                 <div class="form-control-name">
                     <label for="name">お名前 *</label>
-                    <input type="text" name="name" id="name" placeholder="例：北村太郎">
+                    <input type="text" name="name" id="name" placeholder="例：北村太郎" class="input-width">
                 </div>
                 <div class="form-control-sex">
                     <label for="sex">性別</label>
                     <div class="radio-form">
-                        <input type="radio" name="sex" id="male" class="visually-hidden">
+                        <input type="radio" name="sex" id="male" class="visually-hidden" checked>
                         <label for="male">男性</label>
                         <input type="radio" name="sex" id="female" class="visually-hidden">
                         <label for="female">女性</label>
@@ -273,11 +274,11 @@
                 </div>
                 <div class="form-control-email">
                     <label for="email">メールアドレス *</label>
-                    <input type="email" name="email" id="email" placeholder="例：aaaaaaaa@gmail.com">
+                    <input type="email" name="email" id="email" placeholder="例：aaaaaaaa@gmail.com" class="input-width">
                 </div>
                 <div class="form-control-type">
                     <label for="type">問い合わせ種別</label>
-                    <select name="type" id="type">
+                    <select name="type" id="type" class="input-width">
                         <option value="house">家づくりについて</option>
                         <option value="reform">リフォームについて</option>
                         <option value="development">都市計画・開発について</option>
