--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="新築（土地探し〜建築）、リフォーム・リノベーション、都市計画〜開発・公共事業">
+    <meta name="keyword" content="新築,リフォーム,公共事業,">
+
     <title>株式会社キタムラ建設興業</title>
     <!-- css -->
     <link rel="stylesheet" href="./css/ress.css">
