--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="新築（土地探し〜建築）、リフォーム・リノベーション、都市計画〜開発・公共事業">
-    <meta name="keyword" content="新築,リフォーム,公共事業,">
+    <meta name="keywords" content="新築,リフォーム,公共事業,">
 
     <title>株式会社キタムラ建設興業</title>
     <!-- css -->
@@ -332,14 +332,14 @@
                     <label for="personal-information-protection" class="protection-lbl">個人情報保護方針</label>
                     <div class="scroll-container">
                         <div class="personal-information-protection">
-                            <h4>個人情報取扱事業者の氏名又は名称(法24条1項1号)</h4>
+                            <h3>個人情報取扱事業者の氏名又は名称(法24条1項1号)</h3>
                             <p>株式会社 北村建設興業</p>
                             <br>
-                            <h4>個人情報の取り扱い</h4>
+                            <h3>個人情報の取り扱い</h3>
                             <p>弊社は、個人情報保護に関連する法令を遵守し、お客様からご提供いただく個人情報を、細心の注意を払って取り扱っております。このプライバシーポリシーでは、当社におけるお客様の個人情報の取扱いについてご説明しております。
                             </p>
 
-                            <h4>個人情報の利用目的(法18条、15条)</h4>
+                            <h3>個人情報の利用目的(法18条、15条)</h3>
                             <p>弊社は建築物の設計、施工を主とした当社業務ならびにアフターサービスをさせていただく上で、お客様の個人情報を原則として次の利用目的の範囲内で利用させていただきます。なお、アンケート用紙・ウェブサイトの他のページ等で特に利用目的を定めている場合は、その利用目的を含みます。
                             </p>
 
@@ -350,7 +350,7 @@
                                 <br>・商品のアフターサービス、メンテナンス等のためにお客さまと接触するため
                                 <br>・その他お客さまから寄せられたご意見、ご要望にお応えするため、及び弊社が取扱う商品、サービス等の向上を図るため
                             </p>
-                            <h4>保有個人データ利用目的(法24条1項2号)</h4>
+                            <h3>保有個人データ利用目的(法24条1項2号)</h3>
                             <p>・当社が建築したお客様宅のアフターメンテナンスを行うため
                                 ・当社がお客様に提供するサービスにおいて利用するため
                                 ・お客様に特別なサービスや新しい商品などの情報を的確にお知らせするため
@@ -359,11 +359,11 @@
                                 ・必要に応じてお客様に連絡を行うため
                                 ・会計監査上の確認作業を行うため
                             </p>
-                            <h4>個人情報の安全対策(法20条)</h4>
+                            <h3>個人情報の安全対策(法20条)</h3>
                             <p>お客様の個人情報を安全に管理・運営するよう鋭意努力しており、個人情報への外部からの不正なアクセス、個人情報の紛失・毀損・破壊・改ざん・漏えい、社外への不正な流出などへの危険防止に対する合理的かつ適切な安全対策を行っています。また個人情報を取り扱う部門ごとに情報管理責任者を置き、個人情報の適切な管理に努めるとともに、情報セキュリティに関する規程を設けて社員への周知徹底を実施しています。
                             </p>
 
-                            <h4>第三者への提供(法23条)</h4>
+                            <h3>第三者への提供(法23条)</h3>
                             <p>個人情報は、以下のいずれかに該当する場合を除いて、いかなる第三者にも開示・提供いたしません。</p>
                             <p>・お客さまの同意がある場合。
                                 <br>・お客様個人を識別することができない状態で開示する場合。
@@ -373,14 +373,14 @@
                                 <br>・国の機関や地方公共団体又はその委託を受けた者が法令の定める事務を遂行することに対して協力する必要がある場合であって、お客様の同意を得ることにより当該事務の遂行に支障を及ぼすおそれがある場合
                             </p>
 
-                            <h4>個人情報の開示手続(法25条)</h4>
+                            <h3>個人情報の開示手続(法25条)</h3>
                             <p>お客様本人の個人情報に関する保有データの開示請求があった場合には、ご本人であることを運転免許証・パスポート等の身分証明書で確認させていただいた上、本人確認が終了後、速やかに開示させていただきます。
                             </p>
 
-                            <h4>個人情報の訂正等(法26条)</h4>
+                            <h3>個人情報の訂正等(法26条)</h3>
                             <p>前項の開示手続きにより、弊社が保有する保有個人データ内容に事実と異なる記載がある場合には、訂正、変更又は削除の手続きを取らせて頂きます。</p>
 
-                            <h4>プライバシーポリシーに関するお問合せ先</h4>
+                            <h3>プライバシーポリシーに関するお問合せ先</h3>
                             <p>弊社の個人情報の取扱いに関するお問合せは、下記までお問い合せください。</p>
 
                             <p>社名 株式会社北村建設興業</p>
