fix cursor pointer subject

--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -194,41 +194,41 @@
             <div class="news-content">
                 <div class="news-content-info">
                     <div class="news-header bg-green">お知らせ</div>
-                    <div class="news-row first-row">
+                    <a class="news-row first-row">
                         <div class="news-date">2022.02</div>
                         <div class="news-text">公式Instagram、yotubeはじめました。</div>
-                    </div>
-                    <div class="news-row">
+                    </a>
+                    <a class="news-row">
                         <div class="news-date">2021.10</div>
                         <div class="news-text">非住宅 木造建築フェアに出展します。</div>
-                    </div>
-                    <div class="news-row">
+                    </a>
+                    <a class="news-row">
                         <div class="news-date">2021.02</div>
                         <div class="news-text">公式ホームページがリニューアルしました。</div>
-                    </div>
-                    <div class="news-footer">
+                    </a>
+                    <a class="news-footer">
                         <p>more</p>
                         <img src="./images/arrow_right.svg" alt="more">
-                    </div>
+                    </a>
                 </div>
                 <div class="news-content-blog">
                     <div class="news-header bg-green">ブログ</div>
-                    <div class="news-row first-row">
+                    <a class="news-row first-row">
                         <div class="news-date">2022.03</div>
                         <div class="news-text">あけましておめでとうございます。〜会長から社員まで〜</div>
-                    </div>
-                    <div class="news-row">
+                    </a>
+                    <a class="news-row">
                         <div class="news-date">2021.06</div>
                         <div class="news-text">【検証】土地と人に相性はあるのか？</div>
-                    </div>
-                    <div class="news-row">
+                    </a>
+                    <a class="news-row">
                         <div class="news-date">2021.04</div>
                         <div class="news-text">弊社創業初の入社式が行われました。</div>
-                    </div>
-                    <div class="news-footer">
+                    </a>
+                    <a class="news-footer">
                         <p>more</p>
                         <img src="./images/arrow_right.svg" alt="more">
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
