--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -38,12 +38,12 @@
             <div class="hamburger-menu">
                 <nav>
                     <ul>
-                        <li><a href="#about">ABOUT</a></li>
-                        <li><a href="#service">SERVICE</a></li>
-                        <li><a href="#works">WORKS</a></li>
-                        <li><a href="#news">NEWS</a></li>
-                        <li><a href="#company">COMPANY</a></li>
-                        <li><a href="#contact">CONTACT</a></li>
+                        <li><a href="#about" class="hamburger-trigger">ABOUT</a></li>
+                        <li><a href="#service" class="hamburger-trigger">SERVICE</a></li>
+                        <li><a href="#works" class="hamburger-trigger">WORKS</a></li>
+                        <li><a href="#news" class="hamburger-trigger">NEWS</a></li>
+                        <li><a href="#company" class="hamburger-trigger">COMPANY</a></li>
+                        <li><a href="#contact" class="hamburger-trigger">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
