--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -22,7 +22,31 @@
 </head>
 
 <body>
-    top
+    <header class="header">
+        <div class="header-wrapper">
+            <div class="header-logo-title">
+                <img src="./img/icon/logo.svg" alt="logo">
+                <p class="site-title">きたむらミュージックスクール</p>
+            </div>
+            <div class="hamburger hamburger-trigger">
+                <span></span>
+            </div>
+        </div>
+    </header>
+
+    <div class="hamburger-menu">
+        <nav class="hamburger-nav">
+            <ul class="hamburger-list">
+                <li><a href="#fee" class="hamburger-item hamburger-trigger">料金</a></li>
+                <li><a href="#blog" class="hamburger-item hamburger-trigger">ブログ</a></li>
+                <li><a href="#information" class="hamburger-item hamburger-trigger">お知らせ</a></li>
+                <li><a href="#result" class="hamburger-item hamburger-trigger">卒業実績</a></li>
+            </ul>
+        </nav>
+    </div>
+    <!-- js -->
+    <script src="./js/jquery-3.6.0.min.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
