update header sp

--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -33,7 +33,6 @@
             </div>
         </div>
     </header>
-
     <div class="hamburger-menu">
         <nav class="hamburger-nav">
             <ul class="hamburger-list">
@@ -43,6 +42,9 @@
                 <li><a href="#result" class="hamburger-item hamburger-trigger">卒業実績</a></li>
             </ul>
         </nav>
+    </div>
+    <div class="hamburger-bg hamburger-trigger">
+
     </div>
     <!-- js -->
     <script src="./js/jquery-3.6.0.min.js"></script>
