--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -55,8 +55,14 @@
         </nav>
     </div>
     <div class="hamburger-bg hamburger-trigger">
-
     </div>
+    <section id="top">        
+    <div class="top-fv-img bg-cover top--cover">
+        <h1 class="top__message">
+            「音楽で生きる」<br class="no-pc">を叶える<br class="no-pc">ミュージックスクール
+        </h1>
+    </div>
+    </section>    
     <!-- js -->
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/script.js"></script>
