--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -56,13 +56,20 @@
     </div>
     <div class="hamburger-bg hamburger-trigger">
     </div>
-    <section id="top">        
-    <div class="top-fv-img bg-cover top--cover">
-        <h1 class="top__message">
-            「音楽で生きる」<br class="no-pc">を叶える<br class="no-pc">ミュージックスクール
-        </h1>
-    </div>
-    </section>    
+    <section id="top">
+        <div class="top__fv-img">
+            <h1 class="top__message">
+                「音楽で生きる」<br class="no-pc">を叶える<br>ミュージックスクール
+            </h1>
+        </div>
+    </section>
+    <section id="about"></section>
+    <section id="reason"></section>
+    <section id="beggning"></section>
+    <section id="faq"></section>
+    <section id="news"></section>
+    <section id="blog"></section>
+    <footer class="footer"></footer>
     <!-- js -->
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/script.js"></script>
