add top about area

--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -29,11 +29,11 @@
                 <span class="header__logo-title--text-decoration">きたむら</span>ミュージックスクール
             </p>
         </div>
-        <div class="hamburger hamburger-trigger no-pc">
+        <div class="c-hamburger hamburger-trigger no-pc">
             <span></span>
         </div>
-        <nav class="nav pc header__nav">
-            <ul class="nav-list">
+        <nav class="c-nav pc header__nav">
+            <ul class="c-nav-list">
                 <li><a href="#fee" class="nav-item">料金</a></li>
                 <li><a href="#blog" class="nav-item">ブログ</a></li>
                 <li><a href="#information" class="nav-item">お知らせ</a></li>
@@ -44,17 +44,17 @@
             お問い合わせ
         </button>
     </header>
-    <div class="hamburger-menu">
+    <div class="c-hamburger-menu">
         <nav class="hamburger-nav">
             <ul class="hamburger-list">
-                <li><a href="#fee" class="hamburger-item hamburger-trigger">料金</a></li>
-                <li><a href="#blog" class="hamburger-item hamburger-trigger">ブログ</a></li>
-                <li><a href="#information" class="hamburger-item hamburger-trigger">お知らせ</a></li>
-                <li><a href="#result" class="hamburger-item hamburger-trigger">卒業実績</a></li>
+                <li><a href="#fee" class="c-hamburger-item hamburger-trigger">料金</a></li>
+                <li><a href="#blog" class="c-hamburger-item hamburger-trigger">ブログ</a></li>
+                <li><a href="#information" class="c-hamburger-item hamburger-trigger">お知らせ</a></li>
+                <li><a href="#result" class="c-hamburger-item hamburger-trigger">卒業実績</a></li>
             </ul>
         </nav>
     </div>
-    <div class="hamburger-bg hamburger-trigger">
+    <div class="c-hamburger-bg hamburger-trigger">
     </div>
     <section id="top">
         <div class="top__fv-img">
@@ -63,7 +63,47 @@
             </h1>
         </div>
     </section>
-    <section id="about"></section>
+    <section id="about" class="main-wrapper">
+        <h1 class="c-title u-font--red">
+            全人類、<br class="no-pc">ミュージシャン計画。
+        </h1>
+        <p class="about__message">私たちは音楽を愛するすべての人が、音楽に熱狂できる世界を目指しています。</p>
+        <img src="./img/icon/semicircle-sp.svg" alt="半円アイコン" class="no-pc about-semicircle-icon">
+        <img src="./img/icon/semicircle.svg" alt="半円アイコン" class="pc about-semicircle-icon">
+        <div class="about__vision">
+            <!-- <div class="about__vision__item">
+                <p class="u-font--red u-font--bold">Enthusiasm</p>
+                <p>熱狂し</p>
+            </div>
+            <div class="about__vision__item">
+                <p class="u-font--red u-font--bold u-text--right">Envision</p>
+                <p>想像し</p>
+            </div>
+            <div class="about__vision__item">
+                <p class="u-font--red u-font--bold u-text--right">Effulgent</p>
+                <p>輝く存在へ</p>
+            </div> -->
+            <table class="about-table">
+                <tr>
+                    <td class="about-table-col1 u-font--red u-font--bold">Enthusiasm</td>
+                    <td class="about-table-col2"></td>
+                    <td class="about-table-col3">熱狂し</td>
+                </tr>
+                <tr>
+                    <td class="about-table-col1 u-font--red u-font--bold">Envision</td>
+                    <td class="about-table-col2"></td>
+                    <td class="about-table-col3">想像し</td>
+                </tr>
+                <tr>
+                    <td class="about-table-col1 u-font--red u-font--bold">Effulgent</td>
+                    <td class="about-table-col2"></td>
+                    <td class="about-table-col3">輝く存在へ</td>
+                </tr>
+            </table>
+            <img src="./img/icon/up-arrow-red.svg" alt="上矢印赤" class="about-vision-icon__arrow">
+            <img src="./img/icon/circle-red.svg" alt="上矢印赤" class="about-vision-icon__circle">
+        </div>
+    </section>
     <section id="reason"></section>
     <section id="beggning"></section>
     <section id="faq"></section>
