--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -63,45 +63,45 @@
             </h1>
         </div>
     </section>
-    <section id="about" class="main-wrapper">
-        <h1 class="c-title u-font--red">
-            全人類、<br class="no-pc">ミュージシャン計画。
-        </h1>
-        <p class="about__message">私たちは音楽を愛するすべての人が、音楽に熱狂できる世界を目指しています。</p>
-        <img src="./img/icon/semicircle-sp.svg" alt="半円アイコン" class="no-pc about-semicircle-icon">
-        <img src="./img/icon/semicircle.svg" alt="半円アイコン" class="pc about-semicircle-icon">
-        <div class="about__vision">
-            <!-- <div class="about__vision__item">
-                <p class="u-font--red u-font--bold">Enthusiasm</p>
-                <p>熱狂し</p>
+    <section id="about">
+        <div class="main-wrapper">
+            <h1 class="c-title u-font--red">
+                全人類、<br class="no-pc">ミュージシャン計画。
+            </h1>
+            <p class="about__message">私たちは音楽を愛するすべての人が、音楽に熱狂できる世界を目指しています。</p>
+            <img src="./img/icon/semicircle-sp.svg" alt="半円アイコン" class="no-pc about-semicircle-icon">
+            <img src="./img/icon/semicircle.svg" alt="半円アイコン" class="pc about-semicircle-icon">
+            <div class="about__vision">
+                <table class="about-table">
+                    <tr>
+                        <td class="about-table-col1 u-font--red u-font--bold">Enthusiasm</td>
+                        <td class="about-table-col2"></td>
+                        <td class="about-table-col3">熱狂し</td>
+                    </tr>
+                    <tr>
+                        <td class="about-table-col1 u-font--red u-font--bold">Envision</td>
+                        <td class="about-table-col2"></td>
+                        <td class="about-table-col3">想像し</td>
+                    </tr>
+                    <tr>
+                        <td class="about-table-col1 u-font--red u-font--bold">Effulgent</td>
+                        <td class="about-table-col2"></td>
+                        <td class="about-table-col3">輝く存在へ</td>
+                    </tr>
+                </table>
+                <img src="./img/icon/up-arrow-red.svg" alt="上矢印赤" class="about-vision-icon__arrow">
+                <img src="./img/icon/circle-red.svg" alt="上矢印赤" class="about-vision-icon__circle">
             </div>
-            <div class="about__vision__item">
-                <p class="u-font--red u-font--bold u-text--right">Envision</p>
-                <p>想像し</p>
+        </div>
+        <div class="about__declaration">
+            <div class="main-wrapper">
+                <h1 class="about__declaration__title u-font--white">
+                    音楽業界初！<br>収益化までサポートする<br class="no-pc">ミュージックスクール
+                </h1>
+                <p class="about__declaration__message u-font--white">
+                    楽器や作詞作曲などの<br class="no-pc">技術・知識はもちろんのこと<br>自分で稼ぎつづけるための<br class="no-pc">ビジネス面もサポートします！
+                </p>
             </div>
-            <div class="about__vision__item">
-                <p class="u-font--red u-font--bold u-text--right">Effulgent</p>
-                <p>輝く存在へ</p>
-            </div> -->
-            <table class="about-table">
-                <tr>
-                    <td class="about-table-col1 u-font--red u-font--bold">Enthusiasm</td>
-                    <td class="about-table-col2"></td>
-                    <td class="about-table-col3">熱狂し</td>
-                </tr>
-                <tr>
-                    <td class="about-table-col1 u-font--red u-font--bold">Envision</td>
-                    <td class="about-table-col2"></td>
-                    <td class="about-table-col3">想像し</td>
-                </tr>
-                <tr>
-                    <td class="about-table-col1 u-font--red u-font--bold">Effulgent</td>
-                    <td class="about-table-col2"></td>
-                    <td class="about-table-col3">輝く存在へ</td>
-                </tr>
-            </table>
-            <img src="./img/icon/up-arrow-red.svg" alt="上矢印赤" class="about-vision-icon__arrow">
-            <img src="./img/icon/circle-red.svg" alt="上矢印赤" class="about-vision-icon__circle">
         </div>
     </section>
     <section id="reason"></section>
