--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -104,7 +104,63 @@
             </div>
         </div>
     </section>
-    <section id="reason"></section>
+    <section id="reason" class="main-wrapper">
+        <h1 class="reason__heading">
+            きたむらミュージック<br class="no-pc">スクールが選ばれる理由
+        </h1>
+        <div class="reason__item">
+            <div class="reason__img-container">
+                <img src="./img/SP/top/reason01.png" alt="reason01" class="reason__img no-pc" srcset="./img/SP/top/reason01.png 1x,
+                ./img/SP/top/reason01@2x.png 2x">
+                <img src="./img/PC/top/reason01.png" alt="reason01" class="reason__img pc" srcset="./img/PC/top/reason01.png 1x,
+                ./img/PC/top/reason01@2x.png 2x">
+            </div>
+            <div class="reason__desc-container">
+                <h2 class="reason__title">
+                    技術面はプロによるマンツーマン授業！
+                </h2>
+                <hr class="reason__hr">
+                <p class="reason__description">
+                    第一線で活躍するプロによるマンツーマン授業で、きめ細かな技術指導が受けられます。
+                </p>
+            </div>
+        </div>
+        <div class="reason__item">
+            <div class="reason__img-container">
+                <img src="./img/SP/top/reason02.png" alt="reason02" class="reason__img no-pc" srcset="./img/SP/top/reason02.png 1x,
+                ./img/SP/top/reason02@2x.png 2x">
+                <img src="./img/PC/top/reason02.png" alt="reason02" class="reason__img pc" srcset="./img/PC/top/reason02.png 1x,
+                ./img/PC/top/reason02@2x.png 2x">
+            </div>
+            <div class="reason__desc-container">
+                <h2 class="reason__title">
+                    収益化するためのビジネスサポート！
+                </h2>
+                <hr class="reason__hr">
+                <p class="reason__description">
+                    コンセプト設計や集客方法、マーケティングリサーチなど、音楽で稼ぎつづけるための方法やマインドセットをサポートするクラスをご用意。
+                </p>
+            </div>
+        </div>
+        <div class="reason__item">
+            <div class="reason__img-container">
+                <img src="./img/SP/top/reason03.png" alt="reason03" class="reason__img no-pc" srcset="./img/SP/top/reason03.png 1x,
+                ./img/SP/top/reason03@2x.png 2x">
+                <img src="./img/PC/top/reason03.png" alt="reason03" class="reason__img pc" srcset="./img/PC/top/reason03.png 1x,
+                ./img/PC/top/reason03@2x.png 2x">
+            </div>
+            <div class="reason__desc-container">
+                <h2 class="reason__title">
+                    24時間365日使える練習ROOMを完備！
+                </h2>
+                <hr class="reason__hr">
+                <p class="reason__description">
+                    一年中使える個室の練習ROOMを完備しているため、お仕事帰りや合間の時間も自由に練習が可能です。（アプリで予約が必要です）
+                </p>
+            </div>
+        </div>
+    </section>
+    <section id="voice"></section>
     <section id="beggning"></section>
     <section id="faq"></section>
     <section id="news"></section>
