--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -18,7 +18,9 @@
     <meta property="og:locale" content="ja_JP">
     <meta name="twitter:card" content="summary_large_image">
     <!-- css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./lib/slick.css">
+    <link rel="stylesheet" href="./lib/slick-theme.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -40,7 +42,7 @@
                 <li><a href="#result" class="nav-item"></a>卒業実績</li>
             </ul>
         </nav>
-        <button class="pc button button--red button--small header__button">
+        <button class="pc c-button c-button--red c-button--small header__button">
             お問い合わせ
         </button>
     </header>
@@ -65,7 +67,7 @@
     </section>
     <section id="about">
         <div class="main-wrapper">
-            <h1 class="c-title u-font--red">
+            <h1 class="top__title u-font--red">
                 全人類、<br class="no-pc">ミュージシャン計画。
             </h1>
             <p class="about__message">私たちは音楽を愛するすべての人が、音楽に熱狂できる世界を目指しています。</p>
@@ -95,7 +97,7 @@
         </div>
         <div class="about__declaration">
             <div class="main-wrapper">
-                <h1 class="about__declaration__title u-font--white">
+                <h1 class="c-title u-font--white">
                     音楽業界初！<br>収益化までサポートする<br class="no-pc">ミュージックスクール
                 </h1>
                 <p class="about__declaration__message u-font--white">
@@ -105,7 +107,7 @@
         </div>
     </section>
     <section id="reason" class="main-wrapper">
-        <h1 class="reason__heading">
+        <h1 class="c-title">
             きたむらミュージック<br class="no-pc">スクールが選ばれる理由
         </h1>
         <div class="reason__item">
@@ -160,14 +162,54 @@
             </div>
         </div>
     </section>
-    <section id="voice"></section>
-    <section id="beggning"></section>
+    <section id="voice">
+        <div class="main-wrapper">
+            <h1 class="c-title u-font--white">生徒さんたちの声</h1>
+            <div class="js-slider voice__slider">
+                <div class="voice__item">
+                    <div class="voice01 voice__img"></div>
+                    <h2 class="voice__title u-font--white">証券会社勤務　丸山さん</h2>
+                    <p class="voice__text u-font--white">昔やっていた音楽活動で、副収入が得られるようになったので、毎日充実するようになりました。</p>
+                </div>
+                <div class="voice__item">
+                    <div class="voice02 voice__img"></div>
+                    <h2 class="voice__title u-font--white">IT会社勤務　S.Eさん</h2>
+                    <p class="voice__text u-font--white">プロの指導が受けられるので、技術が確実に上がるし、音楽への考え方とかも勉強できて最高です。</p>
+                </div>
+                <div class="voice__item">
+                    <div class="voice03 voice__img"></div>
+                    <h2 class="voice__title u-font--white">都内大学生　田森さん</h2>
+                    <p class="voice__text u-font--white">就職する前にビジネスの事が学べるし、好きな音楽で稼げるようになったので選択肢が増えました。</p>
+                </div>
+                <div class="voice__item">
+                    <div class="voice04 voice__img"></div>
+                    <h2 class="voice__title u-font--white">タイトル</h2>
+                    <p class="voice__text u-font--white">テキストテキストテキストテキストテキストテキストテキスト</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="beggning">
+        <h1 class="c-title">ご利用の流れ</h1>
+        <div class="begginig__contents">
+            <div class="begging__shape">
+                <img src="" alt="" srcset="">
+            </div>
+            <div class="beggining__content">
+                <div class="begging__item">
+                    <h2 class="beggining__item__title"></h2>
+                    <p class="beggining__item_text"></p>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="faq"></section>
     <section id="news"></section>
     <section id="blog"></section>
     <footer class="footer"></footer>
     <!-- js -->
     <script src="./js/jquery-3.6.0.min.js"></script>
+    <script src="./lib/slick.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
