--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -135,7 +135,7 @@
                 ./img/PC/top/reason02@2x.png 2x">
             </div>
             <div class="reason__desc-container">
-                <h2 class="reason__title">
+                <h2 class="reason__title u--mt-6">
                     収益化するためのビジネスサポート！
                 </h2>
                 <hr class="reason__hr">
@@ -152,7 +152,7 @@
                 ./img/PC/top/reason03@2x.png 2x">
             </div>
             <div class="reason__desc-container">
-                <h2 class="reason__title">
+                <h2 class="reason__title u--mt-6">
                     24時間365日使える練習ROOMを完備！
                 </h2>
                 <hr class="reason__hr">
@@ -189,21 +189,43 @@
             </div>
         </div>
     </section>
-    <section id="beggning">
+    <section id="introduction" class="main-wrapper">
         <h1 class="c-title">ご利用の流れ</h1>
-        <div class="begginig__contents">
-            <div class="begging__shape">
-                <img src="" alt="" srcset="">
-            </div>
-            <div class="beggining__content">
-                <div class="begging__item">
-                    <h2 class="beggining__item__title"></h2>
-                    <p class="beggining__item_text"></p>
+        <div class="introduction__contents">
+            <div class="introduction__shape">
+                <img src="../img/icon/down-arrow-red.svg" alt="down-arrow" class="introduction__arrow no-pc">
+                <img src="../img/icon/down-arrow-red-pc.svg" alt="down-arrow" class="introduction__arrow pc">
+                <div class="introduction__circle__container">
+                    <img src="../img/icon/circle-red-single.svg" alt="circle-red-single" class="introduction__circle">
+                    <img src="../img/icon/circle-red-single.svg" alt="circle-red-single" class="introduction__circle">
+                    <img src="../img/icon/circle-red-single.svg" alt="circle-red-single" class="introduction__circle">
+                    <img src="../img/icon/circle-red-single.svg" alt="circle-red-single" class="introduction__circle">
                 </div>
             </div>
+            <table class="introduction__table">
+                <tr>
+                    <td class="u-font--red u-font--bold introduction__title">お問い合わせ</td>
+                    <td class="introduction__text">まずはフォームまたはメールにてお問い合わせください。<br>ヒアリングの日程を調整します。</td>
+                </tr>
+                <tr>
+                    <td class="u-font--red u-font--bold introduction__title">ヒアリング</td>
+                    <td class="introduction__text">現在の技術面や将来の目標などをお伺いします。<br>悩みや不安な事もお気軽にご相談ください。</td>
+                </tr>
+                <tr>
+                    <td class="u-font--red u-font--bold introduction__title u-mt-30">プランのご提案</td>
+                    <td class="introduction__text">ライフスタイルや目標によって最適なプランをご提案します。<br>継続できるようサポートいたします。</td>
+                </tr>
+                <tr>
+                    <td class="u-font--red u-font--bold introduction__title">ご入学</td>
+                    <td class="introduction__text">お申し込み完了後、レッスンがスタートします。<br>マンツーマン指導なので、いつからでもスタートが可能です。</td>
+                </tr>
+            </table>
         </div>
     </section>
-    <section id="faq"></section>
+    <section id="faq">
+        <h1 class="c-title">よくあるご質問</h1>
+
+    </section>
     <section id="news"></section>
     <section id="blog"></section>
     <footer class="footer"></footer>
