add faq, fix reason

--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -135,7 +135,7 @@
                 ./img/PC/top/reason02@2x.png 2x">
             </div>
             <div class="reason__desc-container">
-                <h2 class="reason__title u--mt-6">
+                <h2 class="reason__title reason__not-first-title">
                     収益化するためのビジネスサポート！
                 </h2>
                 <hr class="reason__hr">
@@ -152,7 +152,7 @@
                 ./img/PC/top/reason03@2x.png 2x">
             </div>
             <div class="reason__desc-container">
-                <h2 class="reason__title u--mt-6">
+                <h2 class="reason__title reason__not-first-title">
                     24時間365日使える練習ROOMを完備！
                 </h2>
                 <hr class="reason__hr">
@@ -222,11 +222,54 @@
             </table>
         </div>
     </section>
-    <section id="faq">
+    <section id="faq" class="main-wrapper">
         <h1 class="c-title">よくあるご質問</h1>
-
+        <div class="faq__contents">
+            <div class="accordion__item c-accordion-toggle js-accordion-toggle accordion__flex">
+                <img src="../img/icon/question.svg" alt="question-icon" class="accordion__question-icon">
+                <p class="accordion__item__text">どのような生徒さんがどれぐらいの期間で稼いでいますか？</p>
+            </div>
+            <div class="accordion__collapse u-font--red u-font--bold">
+                <div class="accordion__collapse__inner accordion__flex">
+                    <img src="../img/icon/answer.svg" alt="answer-icon" class="accordion__answer-icon">
+                    <p class="accordion__item__text">個人差はありますが、早ければ３ヶ月ほどで稼げる生徒さんもいらっしゃいます。</p>
+                </div>
+            </div>
+            <div class="accordion__item c-accordion-toggle js-accordion-toggle accordion__flex">
+                <img src="../img/icon/question.svg" alt="question-icon" class="accordion__question-icon">
+                <p class="accordion__item__text">途中でプランを変更することは可能ですか？</p>
+            </div>
+            <div class="accordion__collapse u-font--red u-font--bold ">
+                <div class="accordion__collapse__inner accordion__flex">
+                    <img src="../img/icon/answer.svg" alt="answer-icon" class="accordion__answer-icon">
+                    <p class="accordion__item__text">途中でプラン変更も可能です。毎月15日までに申請すれば翌月からプランが変更となります。</p>
+                </div>
+            </div>
+            <div class="accordion__item c-accordion-toggle js-accordion-toggle accordion__flex">
+                <img src="../img/icon/question.svg" alt="question-icon" class="accordion__question-icon">
+                <p class="accordion__item__text">入学金などの分割払いはできますか？</p>
+            </div>
+            <div class="accordion__collapse u-font--red u-font--bold">
+                <div class="accordion__collapse__inner accordion__flex">
+                    <img src="../img/icon/answer.svg" alt="answer-icon" class="accordion__answer-icon">
+                    <p class="accordion__item__text">分割払いも可能です。</p>
+                </div>
+            </div>
+            <div class="accordion__item c-accordion-toggle js-accordion-toggle accordion__flex">
+                <img src="../img/icon/question.svg" alt="question-icon" class="accordion__question-icon">
+                <p class="accordion__item__text">休学することも可能ですか？</p>
+            </div>
+            <div class="accordion__collapse u-font--red u-font--bold">
+                <div class="accordion__collapse__inner accordion__flex">
+                    <img src="../img/icon/answer.svg" alt="answer-icon" class="accordion__answer-icon">
+                    <p class="accordion__item__text">休学も可能です。</p>
+                </div>
+            </div>
+        </div>
     </section>
-    <section id="news"></section>
+    <section id="news">
+        <h1 class="c-title u-font-red">お知らせ</h1>
+    </section>
     <section id="blog"></section>
     <footer class="footer"></footer>
     <!-- js -->
